# ultramarine-tweaks

./: README.md  meson.build  org.ultramarinelinux.tweaks.desktop  org.ultramarinelinux.tweaks.json  org.ultramarinelinux.tweaks.policy  requirements.txt  ultramarine-tweaks
data/: meson.build  org.example.App.gschema.xml  org.ultramarinelinux.tweaks.appdata.xml.in  org.ultramarinelinux.tweaks.desktop.in  org.ultramarinelinux.tweaks.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
umtweaks/: __main__.py  app.py  meson.build  ultramarine-tweaks.in  umtweaks.gresource.xml  widgets.py  window.py
umtweaks/modules/: __init__.py  appearance.py  backups.py  dnf_repos.py  kernel.py  meson.build  power.py  services.py  test.py  test1.py
